--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,6 @@
 /* this row intentionally left blank */
 
 .page-header-container {
-  width: 100vw;
   height: 90.5vh;
   background: rgba(229, 84, 115, 0.1);
   display: flex;
@@ -37,7 +36,7 @@
   padding-bottom: 32px;
 }
 
-/* Show Now */
+/* BUTTON: SHOP NOW, SIGN UP, SUBSCRIBE */
 .btn-primary {
   color: #fff;
   font-size: 20px;
@@ -55,14 +54,13 @@
   padding-top: 50px;
 }
 
-/* SECTION 02: CONTENT SECTION */
+/* SECTION 02: HOT DEAL SECTION */
 
 /* this row intentionally left blank */
 
 .hot-deal-content-container {
   background-color: #e554730d;
   display: flex;
-  height: 50vh;
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -70,10 +68,11 @@
 }
 
 /* Hot Deal ! Sale Up To 25% Off */
-.section-headline {
+.headline-section {
   color: #272727;
   font-size: 40px;
   font-weight: 800;
+  padding-top: 230px;
   padding-bottom: 24px;
 }
 
@@ -83,10 +82,101 @@
 }
 
 /* It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. */
-.section-about {
+.about-section {
   width: 594px;
   color: rgba(39, 39, 39, 0.6);
   font-size: 18px;
   font-weight: 400;
   padding-bottom: 32px;
 }
+
+/* BUTTON: SIGN UP */
+#btn-sign-up {
+  margin-bottom: 162px;
+}
+
+/* SECTION 03: SOCIAL MEDIA SECTION */
+
+/* this row intentionally left blank */
+
+.instagram-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.instagram-section-text {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+}
+
+/* Instagram */
+#instagram-headline {
+  padding-top: 128px;
+}
+
+/* It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. */
+#instagram-about {
+  padding-bottom: 48px;
+}
+
+/* 4 Flower Images */
+#instagram-section-images {
+  padding-bottom: 128px;
+}
+
+.instagram-flower {
+  padding-right: 24px;
+}
+
+/* SECTION 04: EMAIL SUBSCRIBE SECTION */
+
+/* this row intentionally left blank */
+
+/* Background Image of Get The Latest Deals */
+#bg-form-image {
+  width: 1440px;
+  height: 449px;
+  border-radius: 8px;
+  background-image: url("./Flower Asset/Rectangle 9.png");
+  background-repeat: no-repeat;
+  margin: auto;
+  color: #272727;
+  font-size: 40px;
+  font-weight: 800;
+  text-align: center;
+  padding-bottom: 128px;
+}
+
+/* Get The Latest Deals */
+#sub-form-text {
+  padding-top: 122px;
+  padding-bottom: 16px;
+}
+
+/* $30 coupon for first shopping */
+#coupon-about {
+  color: rgba(39, 39, 39, 0.6);
+  font-size: 18px;
+  font-weight: 400;
+  padding-bottom: 48px;
+  text-align: center;
+}
+
+/* Enter Your Email Here */
+#input-email-box {
+  width: 700px;
+  height: 64px;
+  border-radius: 8px;
+  background: #fff;
+  color: rgba(39, 39, 39, 0.6);
+  font-size: 16px;
+  font-weight: 400;
+  border: none;
+  padding-left: 22px;
+}
+
+/* FOOTER SECTION */
+
+/* this row intentionally left blank */
