--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,9 @@
 /* this row intentionally left blank */
 
 .page-header-container {
-  height: 90.5vh;
+  width: 1920px;
+  height: 850px;
+  flex-shrink: 0;
   background: rgba(229, 84, 115, 0.1);
   display: flex;
   align-items: center;
@@ -59,6 +61,8 @@
 /* this row intentionally left blank */
 
 .hot-deal-content-container {
+  width: 1922px;
+  height: 620px;
   background-color: #e554730d;
   display: flex;
   align-items: center;
@@ -180,3 +184,36 @@
 /* FOOTER SECTION */
 
 /* this row intentionally left blank */
+
+#footer-section {
+  width: 1922px;
+  height: 449px;
+  background: #111010;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#footer-headline {
+  color: #ffffff;
+  font-size: 48px;
+  font-weight: 800;
+  text-align: center;
+  padding-bottom: 24px;
+}
+
+#footer-about {
+  width: 625px;
+  color: rgba(255, 255, 255, 0.9);
+  text-align: center;
+  font-size: 18px;
+  font-weight: 400;
+  padding-bottom: 32px;
+}
+
+#footer-copyright {
+  color: rgba(255, 255, 255, 0.4);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+}
