--- a/styles.css
+++ b/styles.css
@@ -384,3 +384,7 @@
   justify-content: center;
   padding-top: 100px;
 }
+
+/* The greatest glory in living lies not in never falling, but in rising every time we fall. -Nelson Mandela */
+
+/* THE END */
